add heder h2 Чем мі занимаемся

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </div>
       </section>
       <section class="what_doing">
+        <h2>Чем мы занимаемся</h2> 
         <img src="images/img1.jpg" alt="image1" />
         <img src="images/img2.jpg" alt="image2" />
         <img src="images/img3.jpg" alt="image3" />
