--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <a href="#">
-        <img src="images/WebStudio.webp" alt="logo" />
+        <span class="text-web">Web</span><span class="text-studio">Studio</span>
       </a>
       <nav>
         <ul>
@@ -61,16 +61,18 @@
         </div>
       </section>
       <section class="what_doing">
-        <h2>Чем мы занимаемся</h2> 
+        <h2>Чем мы занимаемся</h2>
         <img src="images/img1.jpg" alt="image1" />
         <img src="images/img2.jpg" alt="image2" />
         <img src="images/img3.jpg" alt="image3" />
       </section>
       <section class="our_team">
+        <h2>Наша команда</h2>
         <div class="div_our_team">
-          <img src="images/persona.jpg" alt="persona1" />
+          <img src="images/persona1.jpg" alt="persona1" />
           <h4 class="name_personal">Игорь Демьяненко</h4>
           <p class="position">Product Designer</p>
+          <img src="" alt="" />
         </div>
         <div class="div_our_team">
           <img src="images/persona2.jpg" alt="persona2" />
@@ -92,15 +94,17 @@
 
     <footer>
       <a href="#">
-        <img src="images/WebStudio.webp" alt="logo" />
+        <span class="text-web">Web</span><span class="text-studio">Studio</span>
       </a>
-      <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
-      <p class="mail">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </p>
-      <p class="tel">
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </p>
+      <address>
+        <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="mail">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </p>
+        <p class="tel">
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </p>
+      </address>
     </footer>
   </body>
 </html>
